# persistency-demo

./: .gitignore  LICENSE  Makefile  README.md  fix_checksum.py  persistency-demo.spec
kvs-cpp-demo/: Makefile  kvs_demo.cpp  simple_demo.sh
kvs-rust-demo/: Cargo.toml  Makefile  rust_demo.rs
