[package]
name = "rust_demo"
version = "0.1.0"
edition = "2021"
description = "Comprehensive demonstration program for the KVS Rust library"

# This demo is a standalone package, not part of the workspace
[workspace]

[[bin]]
name = "rust_demo"
path = "rust_demo.rs"

[dependencies]
# Main KVS library - using system installed version
rust_kvs = "0.1.0"

# Dependencies required by the demo
tinyjson = "2.5.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }